@@ -22,6 +22,7 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-mail')
@@ -42,8 +43,8 @@ dependencies {
     developmentOnly('org.springframework.boot:spring-boot-docker-compose')
     testRuntimeOnly('com.h2database:h2')  // H2 for unit tests
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation('io.rest-assured:rest-assured:5.5.0')
-    testImplementation('io.rest-assured:json-path:5.5.0')
+    testImplementation('io.rest-assured:rest-assured:6.0.0')
+    testImplementation('io.rest-assured:json-path:6.0.0')
     testImplementation('io.cucumber:cucumber-java:7.15.0')
     testImplementation('io.cucumber:cucumber-spring:7.15.0')
     testImplementation('io.cucumber:cucumber-junit-platform-engine:7.15.0')
@@ -61,6 +62,14 @@ dependencies {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    jvmArgs(
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.net.www.protocol.http=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.net.www.protocol.https=ALL-UNNAMED'
+    )
 }
 
 spotless {
